fixed invisible sidebar toggle problem

--- a/Limp/Client/UI/Shared/Sidebar/Sidebar.razor.css
+++ b/Limp/Client/UI/Shared/Sidebar/Sidebar.razor.css
@@ -16,7 +16,7 @@
 }
 
 .sidebar-toggle-btn {
-    color: var(--font-color);
+    color: white;
     display: none;
     cursor: pointer;
 }
